--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,27 @@ apply plugin: 'java'
 
 sourceCompatibility=14
 
-// repositories {
-//     mavenLocal()
-//     maven {
-//         url = uri('https://jcenter.bintray.com/')
-//     }
+repositories {
+    mavenLocal()
+    maven {
+        url = uri('https://jcenter.bintray.com/')
+    }
 
-//     maven {
-//         url = uri('https://repo.maven.apache.org/maven2')
-//     }
-// }
+    maven {
+        url = uri('https://repo.maven.apache.org/maven2')
+    }
+}
 
 configurations.all {
     // Check for updates every build
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
+test {
+    useJUnitPlatform()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
