--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ test {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-text:1.9'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
