--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,7 @@ apply plugin: 'java'
 sourceCompatibility=14
 
 repositories {
-    mavenLocal()
-    maven {
-        url = uri('https://jcenter.bintray.com/')
-    }
-
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2')
-    }
+    mavenCentral()
 }
 
 configurations.all {
@@ -24,6 +17,9 @@ test {
 
 dependencies {
     implementation 'org.apache.commons:commons-text:1.9'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    testImplementation  'org.mockito:mockito-core:4.2.0'
 }
