--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation          commonDependencies.apache_commons_text
     implementation          commonDependencies.apache_commons_math3
     implementation          commonDependencies.jackson_core
+    implementation          commonDependencies.matheclipse_core
     
 	compileOnly             commonDependencies.lombok
 	annotationProcessor     commonDependencies.lombok
